Complete auto reconnect, update entities to 137 layout, add rpc services